[package]
name = "wsd_to_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winspool"] }
log = "0.4.19"
simplelog = "0.12.1"
time = "0.3.23"
rand = "0.8.5"